--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "pinia": "^2.0.23",
+    "pinia-persistedstate-plugin": "^0.1.0",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
@@ -31,14 +33,17 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.1.0",
     "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.13",
     "cypress": "^10.10.0",
     "eslint": "^8.22.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.1",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "start-server-and-test": "^1.14.0",
+    "tailwindcss": "^3.2.2",
     "typescript": "~4.7.4",
     "vite": "^3.1.8",
     "vitest": "^0.24.3",
