fix: build command

--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
     "start:dev": "vite --mode development",
     "start:test": "vite --mode test",
     "start:prod": "vite --mode prod",
-    "build:dev": "run-p type-check build-only --mode dev",
-    "build:test": "run-p type-check build-only --mode test",
-    "build:prod": "run-p type-check build-only --mode prod",
+    "build:dev": "run-p type-check build-dev-only",
+    "build:test": "run-p type-check build-test-only",
+    "build:prod": "run-p type-check build-prod-only",
     "preview": "vite preview",
     "test:unit": "vitest --environment jsdom --root src/",
     "test:e2e": "start-server-and-test preview :4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' :4173 'cypress open --e2e'",
-    "build-only": "vite build",
+    "build-dev-only": "vite build  --mode development",
+    "build-test-only": "vite build  --mode test",
+    "build-prod-only": "vite build  --mode prod",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
