--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "build:test": "run-p type-check build-test-only",
     "build:prod": "run-p type-check build-prod-only",
     "preview": "vite preview",
-    "test:unit": "vitest --environment jsdom --root src/",
+    "test:unit": "vitest --environment jsdom --root  src/",
     "test:e2e": "start-server-and-test preview :4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' :4173 'cypress open --e2e'",
     "build-dev-only": "vite build  --mode development",
     "build-test-only": "vite build  --mode test",
     "build-prod-only": "vite build  --mode prod",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "prepare": "husky install"
   },
   "dependencies": {
     "axios": "^1.1.3",
@@ -40,7 +41,9 @@
     "eslint": "^8.22.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.3.0",
+    "husky": "^8.0.2",
     "jsdom": "^20.0.1",
+    "lint-staged": "^13.0.4",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
@@ -50,5 +53,14 @@
     "vite": "^3.1.8",
     "vitest": "^0.24.3",
     "vue-tsc": "^1.0.8"
+  },
+  "lint-staged": {
+    "src/**/*.{js,vue,ts,tsx, jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{html,css,less,scss,md}": [
+      "prettier --write"
+    ]
   }
 }
