feat: update configuration

--- a/tsconfig.config.json
+++ b/tsconfig.config.json
@@ -4,6 +4,6 @@
   "compilerOptions": {
     "composite": true,
     "jsx": "preserve",
-    "types": ["node"]
+    "types": ["node", "element-plus/global"]
   }
 }
