--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "build-prod-only": "vite build  --mode prod",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "element-plus": "^2.2.26",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "pinia": "^2.0.23",
     "pinia-persistedstate-plugin": "^0.1.0",
     "vue": "^3.2.41",
@@ -47,9 +51,13 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.2.2",
     "typescript": "~4.7.4",
+    "unplugin-auto-import": "^0.12.0",
+    "unplugin-vue-components": "^0.22.11",
     "vite": "^3.1.8",
     "vitest": "^0.24.3",
     "vue-tsc": "^1.0.8"
