--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,vue,ts,tsx, jsx}": [
-      "eslint --fix"
+      "prettier --write"
     ],
     "*.{html,css,less,scss,md}": [
       "prettier --write"
